--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
-streamlit==1.5.0
-numpy==1.21.2
-scikit-learn==0.24.2
+streamlit
+numpy
+scikit-learn
+nltk
+streamlit==1.31.0
+numpy==1.26.4
+pandas==2.2.0
+matplotlib==3.8.2
+seaborn==0.13.2
+plotly
